# modbus2mqtt

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  README.MD  README.md  docker-compose.yaml  modbus2mqtt.py  pyproject.toml  requirements.txt
.github/workflows/: run-code-analysis.yaml
example/: deye-inverter-example.yaml
examples/: config_solax_x1_ess_g44.yaml  eastron_sdm.yaml  sht20.yaml
examples/Deye-SG04LP3-EU/: home-assistant.yaml  modbus2mqtt-config.yaml
examples/Unipi-Neuron/: modbus2mqtt-config.yaml
systemd/: modbus2mqtt.service  setup.sh
