[tool.poetry]
name = "imodbus2mqtt"
version = "2023.10.2"
description = "Reads Modbus registers over TCP and publishes them to MQTT."
authors = ["Marcus Zoller <kbialek@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
paho-mqtt = "1.6.1"
pymodbus = "3.5.2"
pyyaml = "6.0.1"

[tool.flake8]
max-line-length = 120
ignore = ['E203', 'W503', 'E501', 'W128']
